TEST_PROGRAMS/INVALID/hongji_chen/invalidWhileStatement.min
#INVALD PROGRAM FAULTY WHILE STATEMENT

var num : int;

while (num=0) do
	num = num -1;
done
